force-app/main/default/objects/SmartIntake_Condition__mdt/SmartIntake_Condition__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Condition</label>
    <pluralLabel>SmartIntake Conditions</pluralLabel>
</CustomObject>