force-app/main/default/objects/SmartIntake_Condition__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>