force-app/main/default/objects/SmartIntake_Condition__mdt/fields/Compare_Value__c.field-meta.xml
<CustomField>
    <fullName>Compare_Value__c</fullName>
    <label>Compare Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>