force-app/main/default/objects/SmartIntake_Condition__mdt/fields/Condition_Key__c.field-meta.xml
<CustomField>
    <fullName>Condition_Key__c</fullName>
    <label>Condition Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>