force-app/main/default/objects/SmartIntake_Condition__mdt/fields/Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>Condition_Logic__c</fullName>
    <label>Condition Logic</label>
    <length>20</length>
    <type>Text</type>
</CustomField>