force-app/main/default/objects/SmartIntake_Condition__mdt/fields/Condition_Number__c.field-meta.xml
<CustomField>
    <fullName>Condition_Number__c</fullName>
    <label>Condition Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>