force-app/main/default/objects/SmartIntake_Condition__mdt/fields/Custom_Logic__c.field-meta.xml
<CustomField>
    <fullName>Custom_Logic__c</fullName>
    <label>Custom Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>