force-app/main/default/objects/SmartIntake_Condition__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>