force-app/main/default/objects/SmartIntake_Condition__mdt/fields/Source_Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Question_Key__c</fullName>
    <label>Source Question Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>