force-app/main/default/objects/SmartIntake_Condition__mdt/fields/Target_Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Target_Question_Key__c</fullName>
    <label>Target Question Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>