force-app/main/default/objects/SmartIntake_Condition__mdt/fields/User_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Message__c</fullName>
    <label>User Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>